<resources>
    <string name="app_name">Adidas</string>
    <string name="sys">Adidas</string>
    <string name="text">Adidas</string>
    <string name="text1">11 cентября в 11:11</string>
    <string name="text2">adidas — производитель спортивной одежды и обуви, основанный в 1949 году в Германии. «Бренд с тремя полосками» является одной из крупнейших спортивных компаний в истории. Гений инноваций, легенда теннисных кортов и всевозможных кроссовок, adidas оказал огромное влияние на индустрию спортивных товаров, моду, культуру и музыку.</string>
    <string name="_27">0</string>
    <string name="_8">0</string>
    <string name="_12">0</string>
    <string name="description_post_save">Сохранить</string>
    <string name="menu_edit">Изменить</string>
    <string name="menu_remove">Удалить</string>
    <string name="post_text">Введите...</string>
    <string name="error_empty_content">Контент не может быть пустым</string>
    <string name="chooser_share_post">Поделиться</string>
    <string name="description_post_like" />
</resources>